--- a/package.json
+++ b/package.json
@@ -20,12 +20,17 @@
   "license": "MIT",
   "homepage": "https://github.com/pd4d10/thrift-utils#readme",
   "devDependencies": {
+    "@types/express": "^4.16.0",
+    "@types/koa": "^2.0.47",
     "typescript": "^3.2.2"
   },
   "dependencies": {
     "@creditkarma/thrift-parser": "^1.1.4",
+    "@types/express-graphql": "^0.6.2",
     "@types/graphql": "^14.0.3",
     "@types/node": "^10.12.18",
-    "graphql": "^14.0.2"
+    "express-graphql": "^0.7.1",
+    "graphql": "^14.0.2",
+    "koa-graphql": "^0.8.0"
   }
 }
