--- a/packages/graphql/package.json
+++ b/packages/graphql/package.json
@@ -11,21 +11,22 @@
     "build": "rm -rf lib && tsc"
   },
   "repository": "pd4d10/thrift",
-  "keywords": [],
+  "keywords": [
+    "thrift",
+    "graphql"
+  ],
   "author": "Rongjian Zhang <pd4d10@gmail.com>",
   "license": "MIT",
-  "homepage": "https://github.com/pd4d10/thrift-utils#readme",
-  "devDependencies": {
-    "@types/express": "^4.16.0",
-    "@types/koa": "^2.0.47"
-  },
+  "homepage": "https://github.com/pd4d10/thrift#readme",
   "dependencies": {
     "@creditkarma/thrift-parser": "^1.1.4",
-    "@types/express-graphql": "^0.6.2",
-    "@types/graphql": "^14.0.3",
-    "@types/node": "^10.12.18",
-    "express-graphql": "^0.7.1",
-    "graphql": "^14.0.2",
-    "koa-graphql": "^0.8.0"
+    "@types/node": "^10.12.18"
+  },
+  "peerDependencies": {
+    "graphql": "^14.0.0"
+  },
+  "devDependencies": {
+    "@types/graphql": "^14.0.4",
+    "graphql": "^14.0.2"
   }
 }
