--- a/package.json
+++ b/package.json
@@ -6,9 +6,13 @@
   "scripts": {
     "clean": "rm -rf packages/*/lib",
     "watch": "tsc --build --watch",
-    "build": "tsc --build"
+    "build": "tsc --build",
+    "test": "jest"
   },
   "devDependencies": {
+    "@babel/preset-typescript": "^7.3.3",
+    "@types/jest": "^24.0.9",
+    "jest": "^24.1.0",
     "typescript": "^3.2.2"
   }
 }
