--- a/package.json
+++ b/package.json
@@ -7,11 +7,16 @@
     "clean": "rm -rf packages/*/lib",
     "watch": "tsc --build --watch",
     "build": "tsc --build",
-    "test": "jest"
+    "test": "jest",
+    "test:watch": "jest --watch"
   },
   "devDependencies": {
+    "@babel/core": "^7.3.4",
+    "@babel/plugin-proposal-class-properties": "^7.3.4",
+    "@babel/preset-env": "^7.3.4",
     "@babel/preset-typescript": "^7.3.3",
     "@types/jest": "^24.0.9",
+    "babel-jest": "^24.1.0",
     "jest": "^24.1.0",
     "typescript": "^3.2.2"
   }
