--- a/packages/graphyne-thrift/package.json
+++ b/packages/graphyne-thrift/package.json
@@ -19,8 +19,10 @@
   },
   "dependencies": {
     "@creditkarma/thrift-parser": "^1.1.4",
+    "@types/debug": "^4.1.2",
     "@types/lodash": "^4.14.122",
     "@types/node": "^10.12.18",
+    "debug": "^4.1.1",
     "lodash": "^4.17.11"
   },
   "peerDependencies": {
